--- a/src/assets/lang/language.af.json
+++ b/src/assets/lang/language.af.json
@@ -415,5 +415,6 @@
   "inProgressCommunityMission": "In progress",
   "completedCommunityMission": "Completed",
   "viewMoreOnNmsWiki": "View more on the NMS wiki",
-  "hashCode": "4706AD1714D472E3AC33C708F6DE1656"
+  "platform": "Platform",
+  "hashCode": "8E3D0E53F59F061EED052F2CC93A454D"
 }
