--- a/src/assets/lang/language.ar.json
+++ b/src/assets/lang/language.ar.json
@@ -415,5 +415,6 @@
   "inProgressCommunityMission": "In progress",
   "completedCommunityMission": "Completed",
   "viewMoreOnNmsWiki": "View more on the NMS wiki",
-  "hashCode": "CE120A3F9CE7CE0DC041FB3DEDA3BCA5"
+  "platform": "Platform",
+  "hashCode": "F079343CBF25C8AB4ECEAA2720D7847B"
 }
