--- a/src/assets/lang/language.cs.json
+++ b/src/assets/lang/language.cs.json
@@ -415,5 +415,6 @@
   "inProgressCommunityMission": "Probíhá",
   "completedCommunityMission": "Dokončeno",
   "viewMoreOnNmsWiki": "Naplánovaný mise komunity",
-  "hashCode": "B17B5A0C9300605FD27A4D95B810F3B7"
+  "platform": "Platform",
+  "hashCode": "00CD1FE22BB7C0B6F79534E0CB1E97A0"
 }
