--- a/src/assets/lang/language.de.json
+++ b/src/assets/lang/language.de.json
@@ -415,5 +415,6 @@
   "inProgressCommunityMission": "In Bearbeitung",
   "completedCommunityMission": "Abgeschlossen",
   "viewMoreOnNmsWiki": "Siehe mehr in der NMS Wiki",
-  "hashCode": "886CF0D761FB30F79BE00DE22DBA5714"
+  "platform": "Platform",
+  "hashCode": "058129B4E66CDF5CDEF86FDB87A882BF"
 }
