--- a/src/assets/lang/language.es.json
+++ b/src/assets/lang/language.es.json
@@ -415,5 +415,6 @@
   "inProgressCommunityMission": "In progress",
   "completedCommunityMission": "Completed",
   "viewMoreOnNmsWiki": "View more on the NMS wiki",
-  "hashCode": "244AC005589E89E9DF5545A4AE6A87F5"
+  "platform": "Platform",
+  "hashCode": "A3B6853E0AE5A0A4861942B3F2BA2558"
 }
