--- a/src/assets/lang/language.fr.json
+++ b/src/assets/lang/language.fr.json
@@ -415,5 +415,6 @@
   "inProgressCommunityMission": "In progress",
   "completedCommunityMission": "Completed",
   "viewMoreOnNmsWiki": "View more on the NMS wiki",
-  "hashCode": "45CFC828A3612F11580A908E4306FD41"
+  "platform": "Platform",
+  "hashCode": "8B007B5A8377E59493CFA41D303896DD"
 }
