--- a/src/assets/lang/language.hu.json
+++ b/src/assets/lang/language.hu.json
@@ -361,7 +361,7 @@
   "nmsNewsExplanation": "Az első Híroldal a No Man's Sky weboldalán közzétett cikkeket tartalmazza a Hírek oldalán, ezek a tételek ritkábban fordulnak elő, mint a Kiadási megjegyzések.  A Kiadási megjegyzések oldal tartalmazza azokat a javítási jegyzeteket, amelyeket a Hello Games ír és közzétesz a Senki Égének weboldalának Kiadási megjegyzések oldalán.  Ezek a Kiadási megjegyzések általában platformspecifikusak.  A Steam Branches oldal felsorolja azokat a különféle ágakat, amelyekkel a No Man's Sky rendelkezik a Steam szolgáltatással.  A Nyilvános fiók a játék változata, amelyet mindenki játszhat.  A kísérleti ág olyan játékfájlokat tartalmaz, amelyekhez csak azok az emberek férhetnek hozzá, akik regisztrálták magukat az NMS bétaverziójába, a belső ág pedig csak a Hello Games személyzetének szól.  Amikor a No Man's Sky frissítései érkeznek, általában a Belső, majd a Kísérleti és végül a Nyilvános fiókba költöznek.  A Steam News oldal tartalmazza a Hello Games által a Steam News részben közzétett bejegyzések gyűjteményét, amelyet általában ritkábban frissítenek, mint a No Man's Sky kezdőlapjának News oldalát.",
   "tapToExpand": "Érintsd meg a kinyitáshoz",
   "oneResource": "One resource",
-  "oneBlueprint": "",
+  "oneBlueprint": "One blueprint",
   "gek": "Gek",
   "vykeen": "Vy'keen",
   "korvax": "Korvax",
@@ -415,5 +415,6 @@
   "inProgressCommunityMission": "In progress",
   "completedCommunityMission": "Completed",
   "viewMoreOnNmsWiki": "View more on the NMS wiki",
-  "hashCode": "EAE9337EF10A8D43A97899F62C07C4E7"
+  "platform": "Platform",
+  "hashCode": "C3D2A0C62947631F5430EF4CB034D7D6"
 }
