--- a/src/assets/lang/language.id.json
+++ b/src/assets/lang/language.id.json
@@ -415,5 +415,6 @@
   "inProgressCommunityMission": "In progress",
   "completedCommunityMission": "Completed",
   "viewMoreOnNmsWiki": "View more on the NMS wiki",
-  "hashCode": "0CF8E1D3FF385ED8E579F125ACF00BEB"
+  "platform": "Platform",
+  "hashCode": "BA1C66F171BC8F9D4743B3020B172F5B"
 }
