--- a/src/assets/lang/language.it.json
+++ b/src/assets/lang/language.it.json
@@ -411,9 +411,10 @@
   "filipino": "Filippino",
   "malaysian": "Malesia",
   "tagalog": "Tagalog",
-  "futureCommunityMission": "Future",
-  "inProgressCommunityMission": "In progress",
-  "completedCommunityMission": "Completed",
+  "futureCommunityMission": "Disponibile prossimamente",
+  "inProgressCommunityMission": "In lavorazione",
+  "completedCommunityMission": "Completata",
   "viewMoreOnNmsWiki": "View more on the NMS wiki",
-  "hashCode": "5B51426976E038615BB3824A1C483145"
+  "platform": "Platform",
+  "hashCode": "2C443E4E5E6B879F3981212736628B0F"
 }
