--- a/src/assets/lang/language.ms.json
+++ b/src/assets/lang/language.ms.json
@@ -415,5 +415,6 @@
   "inProgressCommunityMission": "In progress",
   "completedCommunityMission": "Completed",
   "viewMoreOnNmsWiki": "View more on the NMS wiki",
-  "hashCode": "18366115A0C6EC75B1DCBDA0C48D714C"
+  "platform": "Platform",
+  "hashCode": "C27B78FC8134B55D251B570588F4D4E4"
 }
