--- a/src/assets/lang/language.nl.json
+++ b/src/assets/lang/language.nl.json
@@ -415,5 +415,6 @@
   "inProgressCommunityMission": "In progress",
   "completedCommunityMission": "Completed",
   "viewMoreOnNmsWiki": "View more on the NMS wiki",
-  "hashCode": "69B9DE7A26F3CDA20E5E86C33ECC778C"
+  "platform": "Platform",
+  "hashCode": "1FA49903120603AD7058B358AC4EF238"
 }
