--- a/src/assets/lang/language.no.json
+++ b/src/assets/lang/language.no.json
@@ -189,8 +189,8 @@
   "name": "Navn",
   "unitPrice": "Enhetspris",
   "nanitePrice": "Pris på Nanites",
-  "quicksilverPrice": "",
-  "isConsumable": "",
+  "quicksilverPrice": "Quicksilver Price",
+  "isConsumable": "Consumable",
   "useNMSFont": "Use No Man's Sky font",
   "techTree": "Teknologi tre",
   "inventoryManagement": "Lagerstyring",
@@ -309,7 +309,7 @@
   "customHomepage": "Tilpasset startside",
   "hideSpoilerWarnings": "Skjul spoilervarsler",
   "failedLatestDisplayingOld": "Kunne ikke hente de nyeste, og viser nå gamle data",
-  "planetAddress": "",
+  "planetAddress": "Planet Address",
   "portalAddress": "Portal adresse",
   "rechargeThisUsing": "Lad opp denne  fullt ut ved å bruke:",
   "useXToRecharge": "Bruk (=) til å ladde",
@@ -415,5 +415,6 @@
   "inProgressCommunityMission": "In progress",
   "completedCommunityMission": "Completed",
   "viewMoreOnNmsWiki": "View more on the NMS wiki",
-  "hashCode": "E5E6511BF84F7593B0FAAD4EDA258E6B"
+  "platform": "Platform",
+  "hashCode": "5A7EF8F3FF5E5F6DEC77965505BEB96B"
 }
