--- a/src/assets/lang/language.ph.json
+++ b/src/assets/lang/language.ph.json
@@ -415,5 +415,6 @@
   "inProgressCommunityMission": "In progress",
   "completedCommunityMission": "Completed",
   "viewMoreOnNmsWiki": "View more on the NMS wiki",
-  "hashCode": "29F963DFB9DD7510F3905EC58CD14A8F"
+  "platform": "Platform",
+  "hashCode": "EA35557B750F9BE2B2472A6C0E1BFCCB"
 }
