--- a/src/assets/lang/language.pl.json
+++ b/src/assets/lang/language.pl.json
@@ -415,5 +415,6 @@
   "inProgressCommunityMission": "In progress",
   "completedCommunityMission": "Completed",
   "viewMoreOnNmsWiki": "View more on the NMS wiki",
-  "hashCode": "46FDB8AA72B542EB8CC02E40BC26F18A"
+  "platform": "Platform",
+  "hashCode": "42F67883E105EE3C58DF2AFC1AE6AA2F"
 }
