--- a/src/assets/lang/language.pt-br.json
+++ b/src/assets/lang/language.pt-br.json
@@ -415,5 +415,6 @@
   "inProgressCommunityMission": "In progress",
   "completedCommunityMission": "Completed",
   "viewMoreOnNmsWiki": "View more on the NMS wiki",
-  "hashCode": "317074D005391157CE16466C1F91EF67"
+  "platform": "Platform",
+  "hashCode": "06B6DD90412E320779A0AA0CE8235224"
 }
