--- a/src/assets/lang/language.pt.json
+++ b/src/assets/lang/language.pt.json
@@ -415,5 +415,6 @@
   "inProgressCommunityMission": "In progress",
   "completedCommunityMission": "Completed",
   "viewMoreOnNmsWiki": "View more on the NMS wiki",
-  "hashCode": "B0A94AB8FB53267C9C88FD4194FE172D"
+  "platform": "Platform",
+  "hashCode": "BE88D6FADEADD9B8333B6DA8991B1477"
 }
