--- a/src/assets/lang/language.ro.json
+++ b/src/assets/lang/language.ro.json
@@ -415,5 +415,6 @@
   "inProgressCommunityMission": "In progress",
   "completedCommunityMission": "Completed",
   "viewMoreOnNmsWiki": "View more on the NMS wiki",
-  "hashCode": "E794326C5F21F1D17415A8C98BF88D9D"
+  "platform": "Platform",
+  "hashCode": "092015C3CB85DCED370621357D3AC36C"
 }
