--- a/src/assets/lang/language.ru.json
+++ b/src/assets/lang/language.ru.json
@@ -322,7 +322,7 @@
   "pendingAppStoreRelease": "Ожидание подтверждения в App Store",
   "alienPuzzleFormat": "{0} {1} {2}",
   "featureNotAvailable": "Функциональность недоступна",
-  "featureNotAvailableDescrip": "",
+  "featureNotAvailableDescrip": "This feature will be unlocked in {0}. Patrons get early access to these features. Please consider supporting!",
   "manufacturingPuzzles": "Загадки на заводах",
   "appVersion": "Версия приложения: {0}",
   "gameVersion": "Версия игры: {0}",
@@ -415,5 +415,6 @@
   "inProgressCommunityMission": "В процессе",
   "completedCommunityMission": "Выполнено",
   "viewMoreOnNmsWiki": "Узнать больше на NMS wiki",
-  "hashCode": "3CA598F4545C8CC0E9C7E07014B49B22"
+  "platform": "Platform",
+  "hashCode": "68FF2DA453295DD3240294D2824AB41D"
 }
