--- a/src/assets/lang/language.tr.json
+++ b/src/assets/lang/language.tr.json
@@ -415,5 +415,6 @@
   "inProgressCommunityMission": "In progress",
   "completedCommunityMission": "Completed",
   "viewMoreOnNmsWiki": "View more on the NMS wiki",
-  "hashCode": "40EE037C6D2BB97195C6C59D853CBA56"
+  "platform": "Platform",
+  "hashCode": "E3834D4145DE5C2C001E964397E0C53A"
 }
