--- a/src/assets/lang/language.ur.json
+++ b/src/assets/lang/language.ur.json
@@ -415,5 +415,6 @@
   "inProgressCommunityMission": "In progress",
   "completedCommunityMission": "Completed",
   "viewMoreOnNmsWiki": "View more on the NMS wiki",
-  "hashCode": "34C5B254D1FD31AF184A2C31F349E1F9"
+  "platform": "Platform",
+  "hashCode": "8319815E0C10F5C4D111E4BB31E078C5"
 }
