--- a/src/assets/lang/language.vi-vn.json
+++ b/src/assets/lang/language.vi-vn.json
@@ -415,5 +415,6 @@
   "inProgressCommunityMission": "In progress",
   "completedCommunityMission": "Completed",
   "viewMoreOnNmsWiki": "View more on the NMS wiki",
-  "hashCode": "AE2C492E176AFD778AEF7140766F84AB"
+  "platform": "Platform",
+  "hashCode": "8E0F52D0D877137DA8D7646B0F57EDFA"
 }
