--- a/src/assets/lang/language.zh-hans.json
+++ b/src/assets/lang/language.zh-hans.json
@@ -271,37 +271,37 @@
   "details": "细节",
   "totalPowerConsumed": "电力消耗总值",
   "totalSolarProduced": "太阳能总产量",
-  "minimumSummary": "最低限度的总结",
-  "recommendedSummary": "推荐总结",
+  "minimumSummary": "最低需求",
+  "recommendedSummary": "推荐需求",
   "basedOnWorstCase": "基于太阳直射头顶的最坏情况。",
   "bestCaseScenarioLocation": "最好的情况是在星球上离太阳最远的地方。 这 - 可悲的是 - 通常与行星极坐标不匹配。 然而，它将始终是日出/日落，太阳能电池板全天以 50% (25kPs) 运行（游戏中 24 小时/实时 1800 秒）。 在这种情况下不需要电池。",
   "recommended": "推荐",
   "info": "信息",
   "sunrise": "日出",
-  "sunset": "黄昏",
-  "night": "夜晚",
-  "total": "总共",
-  "powerStored": "已储存电力",
-  "powerRequired": "夜晚开始时需要的电力",
-  "powerUnused": "",
-  "powerLost": "电力消耗",
+  "sunset": "日落",
+  "night": "夜间",
+  "total": "总计",
+  "powerStored": "日间净电力",
+  "powerRequired": "夜间所需电力",
+  "powerUnused": "电力盈余",
+  "powerLost": "电力损失",
   "inGame": "游戏内",
   "realTime": "现实时间",
   "daytime": "天",
   "flatList": "清单",
-  "tree": "树",
+  "tree": "树状图",
   "onlineMeetup2020": "2020年在线聚会",
   "patrons": "赞助者",
-  "weekendMission": "",
-  "joinPatreon": "加入Patreon",
-  "requiresTheFollowing": "需求：",
+  "weekendMission": "社区周常任务",
+  "joinPatreon": "成为赞助人",
+  "requiresTheFollowing": "需要：",
   "itemsRequiredConfirmedBy": "所需物品，经确认",
-  "readConversation": "",
+  "readConversation": "阅读回话",
   "spoilerAlert": "剧透警告",
   "spoilersAhead": "前方内容含有剧透",
-  "conversationEnded": "对话已结束",
+  "conversationEnded": "回话已结束",
   "prevCommunityMission": "以前的社区任务奖励",
-  "weekendMissionVideo": "周末任务视频",
+  "weekendMissionVideo": "周常任务视频",
   "nextWeekendMission": "下一个周末任务",
   "previousWeekendMission": "以前的周末任务",
   "homepage": "首页",
@@ -309,30 +309,30 @@
   "customHomepage": "自定义首页",
   "hideSpoilerWarnings": "隐藏剧透警告",
   "failedLatestDisplayingOld": "无法获取最新数据，当前显示的是旧数据",
-  "planetAddress": "星球坐标",
+  "planetAddress": "行星坐标",
   "portalAddress": "传送门坐标",
-  "rechargeThisUsing": "使用以下方法为该物品完全充电：",
-  "useXToRecharge": "使用{0}重新装填",
+  "rechargeThisUsing": "完全充能需要：",
+  "useXToRecharge": "需要 {0} 来充能：",
   "communitySpotlight": "社区聚焦",
-  "titles": "标题",
+  "titles": "头衔",
   "owned": "已拥有",
   "notOwned": "未拥有",
   "playerName": "玩家名称",
-  "release": "发布{0}",
+  "release": "版本号 {0}",
   "pendingAppStoreRelease": "等待 App Store 批准",
-  "alienPuzzleFormat": "",
+  "alienPuzzleFormat": "{0} {1} 第{2}种",
   "featureNotAvailable": "功能未开放",
   "featureNotAvailableDescrip": "这项功能将会在{0}天后解锁，Patron订阅者能够得到提前测试资格，请考虑订阅。",
-  "manufacturingPuzzles": "生产设施异象",
-  "appVersion": "应用版本：{0}",
+  "manufacturingPuzzles": "生产设施谜题",
+  "appVersion": "目前版本：",
   "gameVersion": "游戏版本：{0}",
-  "patreonAccess": "访问权限",
-  "unableToLogInToGoogleAccount": "无法登入您的谷歌账户",
+  "patreonAccess": "赞助者访问权",
+  "unableToLogInToGoogleAccount": "无法凭借你的谷歌账号来登录",
   "pleaseAddContainer": "请添加容器",
-  "likeNotSubmitted": "您的“赞”未提交",
+  "likeNotSubmitted": "点赞失败",
   "manufacturingFacilityRewards": "生产设施奖励",
   "creditToYakuzaSuskeForCreatingHDImage": "感谢Yakuza_Suske制作的高清物品图标",
-  "learnNewWord": "学习到新词语",
+  "learnNewWord": "练习生产设施谜题",
   "factionStanding": "{0} 声望 {1}",
   "blueprint": "蓝图",
   "viewPossibleRewards": "查看{0}种可能奖励",
@@ -343,66 +343,66 @@
   "displaySeasonalBackground": "关闭节日背景",
   "japanese": "日文",
   "enabled": "已启用",
-  "percentage": "百分之{0} ",
+  "percentage": "{0}%",
   "lightYear": "{0}光年",
-  "meter": "米",
-  "proceduralStats": "加成类型(最少: {0}, 最多: {1})",
+  "meter": "{0} 米",
+  "proceduralStats": "加成（最少：{0}，最多: {1}）",
   "stats": "加成",
-  "statAlwaysIncluded": "总是包含",
-  "statPossible": "可能",
-  "translationPercentageComplete": "每样语言的翻译进度",
+  "statAlwaysIncluded": "固定加成",
+  "statPossible": "随机加成",
+  "translationPercentageComplete": "每种语言的翻译进度",
   "useTranslationTool": "使用翻译工具",
   "norwegian": "挪威语",
   "nmsfm": "无人深空FM",
-  "steamNews": "steam新闻",
-  "nmsfmSubtitle": "旅行者为旅行者提供的音乐",
-  "steamBranches": "STEAM分支",
+  "steamNews": "Steam新闻",
+  "nmsfmSubtitle": "各路旅行者的原创音乐",
+  "steamBranches": "Steam分支",
   "nmsNews": "无人深空新闻",
-  "nmsNewsExplanation": "第一个新闻页面包含在 No Man's Sky 网站的新闻页面上发布的文章，这些条目的频率低于发行说明。 发行说明页面包含 Hello Games 编写并发布到《无人深空》网站上的发行说明页面的补丁说明。 这些发行说明通常是特定于平台的。 Steam 分支页面包含了无人深空在 Steam 上的不同分支列表。 公共分支是每个人都可以玩的游戏版本。 实验分支包含只有已注册 NMS 测试版的人才能访问的游戏文件，内部分支仅适用于 Hello Games 员工。 当更新来到无人深空时，它们通常会转移到内部，然后是实验，最后是公共分支。 Steam 新闻页面包含 Hello Games 在 Steam 新闻部分发布的帖子集合，更新频率通常低于无人深空主页上的新闻页面",
+  "nmsNewsExplanation": "第一个新闻页面囊括了在No Man's Sky官网的新闻页面上发布的文章，这些条目的更新速率慢于更新公告。 更新公告页面包含由Hello Games编写并发布到《无人深空》网站上的发行说明页面的补丁说明。 这些发行说明通常是特定于平台的。 Steam的分支页面包含了无人深空在Steam上的不同分支列表。 公共分支是每个人都可以玩的游戏版本。 实验分支仅给已注册NMS测试版的人才能访问的游戏预发布版本，内部分支仅适用于Hello Games 员工。 当更新将发布时，它们通常会更新至内部分支，然后是实验分支，最后是公共分支。Steam新闻页面包含Hello Games在Steam新闻部分发布的帖子集合，更新频率通常低于无人深空官网上的新闻页面。",
   "tapToExpand": "点击展开",
   "oneResource": "一种资源",
   "oneBlueprint": "一张蓝图",
   "gek": "吉克",
-  "vykeen": "维基恩",
-  "korvax": "科瓦克斯",
-  "manufacturingFacilityFactory": "{0} 工厂 {1}",
-  "manufacturingFacilityHarvestor": "{0} 收割机 {1}",
-  "eggModification": "卵改良",
-  "eggModificationHelpfulness": "乐于助人",
-  "eggModificationAggression": "侵略的",
-  "eggModificationIndependence": "独立的",
+  "vykeen": "维吉恩",
+  "korvax": "科尔瓦克斯",
+  "manufacturingFacilityFactory": "{0}生产设施{1}",
+  "manufacturingFacilityHarvestor": "{0}开采设施{1}",
+  "eggModification": "基因编辑",
+  "eggModificationHelpfulness": "乐于助人的",
+  "eggModificationAggression": "攻击性",
+  "eggModificationIndependence": "独立性",
   "eggModificationNeuralCalibrator": "神经校准器",
   "secondsAbbrev": "{0}秒",
-  "minutesAbbrev": "{0}米",
+  "minutesAbbrev": "{0}分钟",
   "minutesSecondsAbbrev": "{0}分 {1}秒",
   "viewTrackList": "查看曲目列表",
   "nmsfmCreator": "无人深空电台创作者",
   "seasonalExpedition": "远征里程碑",
   "rewards": "奖励",
   "walkthroughPlaylistExpeditionsSeasonNum": "游戏攻略播放列表: 远征赛季{0}",
-  "viewUnusedMilestonePatches": "查看未使用的里程碑补丁",
-  "unusedMilestonePatches": "未使用的里程碑补丁",
-  "markAsClaimed": "标记为已知",
+  "viewUnusedMilestonePatches": "查看未使用的里程碑图标",
+  "unusedMilestonePatches": "未使用的里程碑图标",
+  "markAsClaimed": "标为已获得",
   "markAsNotClaimed": "标记为未获得",
-  "communityMissionMismatchTitle": "当前社区任务的奖励似乎不正确。",
-  "communityMissionMismatchMessage": "当更新无人深空和社区任务顺序更改时，可能会发生这种情况。 请等待应用程序的下一次更新（通常是每周五）以修复游戏物品的显示",
+  "communityMissionMismatchTitle": "社区研究实时进度获取失败。",
+  "communityMissionMismatchMessage": "这一般会在无人深空更新或者社区研究内容更改时发生。请等待应用程序的下一次更新（通常在周五）以修复。",
   "seasonalExpeditionSeasons": "远征赛季",
-  "puzzles": "异象",
-  "observatory": "观察站",
+  "puzzles": "设施谜题",
+  "observatory": "了望台",
   "abandonedBuilding": "废弃建筑物",
   "monolith": "远古石碑",
-  "plaque": "远古牌匾",
+  "plaque": "铭文碑",
   "transmissionTower": "传输塔",
-  "stationCore": "站点核心",
+  "stationCore": "空间站核心",
   "atlas": "阿特拉斯",
-  "playerTakeDamage": "太空服受到伤害",
+  "playerTakeDamage": "玩家会受到伤害",
   "playerHealthRestored": "生命值恢复",
   "rewardMinMax": "最少: {0}, 最多: {1}",
   "playerShieldRestored": "护盾恢复",
   "playerScanReward": "扫描附近建筑物",
   "playerDamagedTechReward": "技术受到一些损坏",
-  "journeyMilestone": "旅程里程碑",
-  "nmsThemed": "无人深空主题字体",
+  "journeyMilestone": "里程碑",
+  "nmsThemed": "无人深空字体",
   "defaultFont": "默认字体",
   "settingsFont": "字体",
   "arabic": "阿拉伯文",
@@ -411,9 +411,10 @@
   "filipino": "菲律宾语",
   "malaysian": "马来西亚语",
   "tagalog": "他加禄语",
-  "futureCommunityMission": "Future",
-  "inProgressCommunityMission": "In progress",
-  "completedCommunityMission": "Completed",
-  "viewMoreOnNmsWiki": "View more on the NMS wiki",
-  "hashCode": "D364392FED7867584C7FAD6F836D2855"
+  "futureCommunityMission": "即将到来",
+  "inProgressCommunityMission": "正在进行",
+  "completedCommunityMission": "已完成的",
+  "viewMoreOnNmsWiki": "前往无人深空Wiki查看更多",
+  "platform": "游戏平台",
+  "hashCode": "35CC41EB52DF6ECC2C015E3D591EA277"
 }
