--- a/src/assets/lang/language.zh-hant.json
+++ b/src/assets/lang/language.zh-hant.json
@@ -415,5 +415,6 @@
   "inProgressCommunityMission": "In progress",
   "completedCommunityMission": "Completed",
   "viewMoreOnNmsWiki": "View more on the NMS wiki",
-  "hashCode": "EDCEB0D9FFE9880EB038C841F9812DB6"
+  "platform": "Platform",
+  "hashCode": "8200366C6D80DD909B8DF2C3138F1231"
 }
