--- a/src/assets/lang/language.tl.json
+++ b/src/assets/lang/language.tl.json
@@ -415,5 +415,6 @@
   "inProgressCommunityMission": "In progress",
   "completedCommunityMission": "Completed",
   "viewMoreOnNmsWiki": "View more on the NMS wiki",
-  "hashCode": "1017B8254049E78435FCDF387971FAAC"
+  "platform": "Platform",
+  "hashCode": "2A7061D34CF44CD59BC1FAA9DAF11014"
 }
