--- a/src/assets/lang/language.en.json
+++ b/src/assets/lang/language.en.json
@@ -341,6 +341,7 @@
   "unlockItemsUsingTheFactoryOverrideUnit": "Unlock the following items using the Factory Override Unit",
   "assistantApps": "AssistantApps",
   "displaySeasonalBackground": "Display Seasonal Background",
+  "japanese": "Japanese",
   "enabled": "Enabled",
   "percentage": "{0}%",
   "lightYear": "{0} ly",
@@ -414,5 +415,6 @@
   "inProgressCommunityMission": "In progress",
   "completedCommunityMission": "Completed",
   "viewMoreOnNmsWiki": "View more on the NMS wiki",
+  "platform": "Platform",
   "hashCode": "9B5685C0D787E05F8327FC50D2C70D8D"
 }
