--- a/src/assets/lang/language.af.json
+++ b/src/assets/lang/language.af.json
@@ -416,5 +416,6 @@
   "completedCommunityMission": "Completed",
   "viewMoreOnNmsWiki": "View more on the NMS wiki",
   "platform": "Platform",
-  "hashCode": "8E3D0E53F59F061EED052F2CC93A454D"
+  "translators": "Translators",
+  "hashCode": "41959CFF393CC883E00E440B7002FB87"
 }
