--- a/src/assets/lang/language.ar.json
+++ b/src/assets/lang/language.ar.json
@@ -416,5 +416,6 @@
   "completedCommunityMission": "Completed",
   "viewMoreOnNmsWiki": "View more on the NMS wiki",
   "platform": "Platform",
-  "hashCode": "F079343CBF25C8AB4ECEAA2720D7847B"
+  "translators": "Translators",
+  "hashCode": "F589AF662EE4F6FB7DCB4489390237D4"
 }
