--- a/src/assets/lang/language.cs.json
+++ b/src/assets/lang/language.cs.json
@@ -416,5 +416,6 @@
   "completedCommunityMission": "Dokončeno",
   "viewMoreOnNmsWiki": "Naplánovaný mise komunity",
   "platform": "Platform",
-  "hashCode": "00CD1FE22BB7C0B6F79534E0CB1E97A0"
+  "translators": "Translators",
+  "hashCode": "232F61A9ABBF0A4DE4105E0E359A4834"
 }
