--- a/src/assets/lang/language.de.json
+++ b/src/assets/lang/language.de.json
@@ -416,5 +416,6 @@
   "completedCommunityMission": "Abgeschlossen",
   "viewMoreOnNmsWiki": "Siehe mehr in der NMS Wiki",
   "platform": "Platform",
-  "hashCode": "058129B4E66CDF5CDEF86FDB87A882BF"
+  "translators": "Translators",
+  "hashCode": "1883AF55A481A0A7378DA3DCC6533376"
 }
