--- a/src/assets/lang/language.en.json
+++ b/src/assets/lang/language.en.json
@@ -416,5 +416,6 @@
   "completedCommunityMission": "Completed",
   "viewMoreOnNmsWiki": "View more on the NMS wiki",
   "platform": "Platform",
+  "translators": "Translators",
   "hashCode": "9B5685C0D787E05F8327FC50D2C70D8D"
 }
