--- a/src/assets/lang/language.es.json
+++ b/src/assets/lang/language.es.json
@@ -29,7 +29,7 @@
   "about": "Acerca de",
   "aboutContent": "¿Por qué me he molestado en hacer esta app? Un día estaba jugando a No Man's Sky y quería planear qué recursos farmeables debería tener en una nueva base, y pensé que sería más fácil descargar una app de la Play/App Store que mirar la wiki en mi segundo monitor. Encontré una app y me topé con una paywall cuando intenté mirar las recetas de objetos fabricados, así que, molesto, decidí hacer una app gratuita que pudiese usar todo el mundo. Fue taambién una gran excusa para trastear con el desarrollo de apps a través de Flutter.\n\nP.D. También tengo un blog, Inside my Mind - por Kurt Lourens. No lo he estado usando tanto como hubiese podido, pero tengo algún que otro artículo 😋.\n\nEsta aplicación no está afiliada con Hello Games, No Man's Sky, sus subsidiarias o sus empresas matrices cuyos nombres, logos y productos aparecen en esta app.",
   "language": "Ayuda con idiomas",
-  "languageContent": "Lenguage del contenido\n",
+  "languageContent": "Necesito ayuda traduciendo esta app a varios idiomas. Sólo sé inglés y afrikaans y un poco de francés. Si estás dispuesto a ayudarme por favor házmelo saber. Iré poniendo los nombres de aquellos que contribuyan y quieran reconocimiento en la web 😁\n",
   "email": "Ofrecer ayuda",
   "github": "Ir a Github",
   "kurtsBlog": " Blog de Kurt",
@@ -411,10 +411,11 @@
   "filipino": "Filipino",
   "malaysian": "Malayo",
   "tagalog": "Tagalo",
-  "futureCommunityMission": "Future",
-  "inProgressCommunityMission": "In progress",
-  "completedCommunityMission": "Completed",
-  "viewMoreOnNmsWiki": "View more on the NMS wiki",
-  "platform": "Platform",
-  "hashCode": "A3B6853E0AE5A0A4861942B3F2BA2558"
+  "futureCommunityMission": "Futura",
+  "inProgressCommunityMission": "En progreso",
+  "completedCommunityMission": "Completada",
+  "viewMoreOnNmsWiki": "Mira más en la Wiki de NMS",
+  "platform": "Plataforma",
+  "translators": "Traductores",
+  "hashCode": "B4AC120B11DE2D2FB49602F7A8AB69FA"
 }
