--- a/src/assets/lang/language.fr.json
+++ b/src/assets/lang/language.fr.json
@@ -408,13 +408,14 @@
   "arabic": "Arabe",
   "vietnamese": "vietnamien",
   "urdu": "Urdu",
-  "filipino": "Filipino",
-  "malaysian": "Malaysian",
+  "filipino": "Philippin",
+  "malaysian": "Malaisien",
   "tagalog": "Tagalog",
-  "futureCommunityMission": "Future",
-  "inProgressCommunityMission": "In progress",
-  "completedCommunityMission": "Completed",
-  "viewMoreOnNmsWiki": "View more on the NMS wiki",
-  "platform": "Platform",
-  "hashCode": "8B007B5A8377E59493CFA41D303896DD"
+  "futureCommunityMission": "Prochainement",
+  "inProgressCommunityMission": "En cours",
+  "completedCommunityMission": "Terminée",
+  "viewMoreOnNmsWiki": "Voir plus sur le Wiki NMS",
+  "platform": "Console",
+  "translators": "Translators",
+  "hashCode": "BA04DD3E9B4294B45714FB96D013C1BD"
 }
