--- a/src/assets/lang/language.hu.json
+++ b/src/assets/lang/language.hu.json
@@ -416,5 +416,6 @@
   "completedCommunityMission": "Completed",
   "viewMoreOnNmsWiki": "View more on the NMS wiki",
   "platform": "Platform",
-  "hashCode": "C3D2A0C62947631F5430EF4CB034D7D6"
+  "translators": "Translators",
+  "hashCode": "7115E4203AD03ABB1F590DB980A50C79"
 }
