--- a/src/assets/lang/language.id.json
+++ b/src/assets/lang/language.id.json
@@ -416,5 +416,6 @@
   "completedCommunityMission": "Completed",
   "viewMoreOnNmsWiki": "View more on the NMS wiki",
   "platform": "Platform",
-  "hashCode": "BA1C66F171BC8F9D4743B3020B172F5B"
+  "translators": "Translators",
+  "hashCode": "D0A08091D53F81E88F48D121C3B81FCE"
 }
