--- a/src/assets/lang/language.it.json
+++ b/src/assets/lang/language.it.json
@@ -416,5 +416,6 @@
   "completedCommunityMission": "Completata",
   "viewMoreOnNmsWiki": "View more on the NMS wiki",
   "platform": "Platform",
-  "hashCode": "2C443E4E5E6B879F3981212736628B0F"
+  "translators": "Translators",
+  "hashCode": "99D42E17A91ECC56983992ACFED92EDA"
 }
