--- a/src/assets/lang/language.ms.json
+++ b/src/assets/lang/language.ms.json
@@ -416,5 +416,6 @@
   "completedCommunityMission": "Completed",
   "viewMoreOnNmsWiki": "View more on the NMS wiki",
   "platform": "Platform",
-  "hashCode": "C27B78FC8134B55D251B570588F4D4E4"
+  "translators": "Translators",
+  "hashCode": "7DAC4D35FE5C7FAFE9F6086A11030C11"
 }
