--- a/src/assets/lang/language.nl.json
+++ b/src/assets/lang/language.nl.json
@@ -416,5 +416,6 @@
   "completedCommunityMission": "Completed",
   "viewMoreOnNmsWiki": "View more on the NMS wiki",
   "platform": "Platform",
-  "hashCode": "1FA49903120603AD7058B358AC4EF238"
+  "translators": "Translators",
+  "hashCode": "6DA995A7C1E26DAF29DA4BE308624816"
 }
