--- a/src/assets/lang/language.no.json
+++ b/src/assets/lang/language.no.json
@@ -416,5 +416,6 @@
   "completedCommunityMission": "Completed",
   "viewMoreOnNmsWiki": "View more on the NMS wiki",
   "platform": "Platform",
-  "hashCode": "5A7EF8F3FF5E5F6DEC77965505BEB96B"
+  "translators": "Translators",
+  "hashCode": "0C84831867DCA828342EE9965C07C8A3"
 }
