--- a/src/assets/lang/language.ph.json
+++ b/src/assets/lang/language.ph.json
@@ -416,5 +416,6 @@
   "completedCommunityMission": "Completed",
   "viewMoreOnNmsWiki": "View more on the NMS wiki",
   "platform": "Platform",
-  "hashCode": "EA35557B750F9BE2B2472A6C0E1BFCCB"
+  "translators": "Translators",
+  "hashCode": "40DA39DCA11A7E45AA60E87C310D594F"
 }
