--- a/src/assets/lang/language.pl.json
+++ b/src/assets/lang/language.pl.json
@@ -416,5 +416,6 @@
   "completedCommunityMission": "Completed",
   "viewMoreOnNmsWiki": "View more on the NMS wiki",
   "platform": "Platform",
-  "hashCode": "42F67883E105EE3C58DF2AFC1AE6AA2F"
+  "translators": "Translators",
+  "hashCode": "36F68FDE41029012D8FD446D15DE5E15"
 }
