--- a/src/assets/lang/language.pt-br.json
+++ b/src/assets/lang/language.pt-br.json
@@ -416,5 +416,6 @@
   "completedCommunityMission": "Completed",
   "viewMoreOnNmsWiki": "View more on the NMS wiki",
   "platform": "Platform",
-  "hashCode": "06B6DD90412E320779A0AA0CE8235224"
+  "translators": "Translators",
+  "hashCode": "5C49FFB330834AD857A360133399F530"
 }
