--- a/src/assets/lang/language.pt.json
+++ b/src/assets/lang/language.pt.json
@@ -416,5 +416,6 @@
   "completedCommunityMission": "Completed",
   "viewMoreOnNmsWiki": "View more on the NMS wiki",
   "platform": "Platform",
-  "hashCode": "BE88D6FADEADD9B8333B6DA8991B1477"
+  "translators": "Translators",
+  "hashCode": "F0287CAC498C372F3EC81471F1657A8B"
 }
