--- a/src/assets/lang/language.ro.json
+++ b/src/assets/lang/language.ro.json
@@ -416,5 +416,6 @@
   "completedCommunityMission": "Completed",
   "viewMoreOnNmsWiki": "View more on the NMS wiki",
   "platform": "Platform",
-  "hashCode": "092015C3CB85DCED370621357D3AC36C"
+  "translators": "Translators",
+  "hashCode": "594350E906A797CC8F7803D68F6599A7"
 }
