--- a/src/assets/lang/language.ru.json
+++ b/src/assets/lang/language.ru.json
@@ -416,5 +416,6 @@
   "completedCommunityMission": "Выполнено",
   "viewMoreOnNmsWiki": "Узнать больше на NMS wiki",
   "platform": "Platform",
-  "hashCode": "68FF2DA453295DD3240294D2824AB41D"
+  "translators": "Translators",
+  "hashCode": "B5E97D125824ADDC76B99211AB1F8112"
 }
