--- a/src/assets/lang/language.tr.json
+++ b/src/assets/lang/language.tr.json
@@ -416,5 +416,6 @@
   "completedCommunityMission": "Completed",
   "viewMoreOnNmsWiki": "View more on the NMS wiki",
   "platform": "Platform",
-  "hashCode": "E3834D4145DE5C2C001E964397E0C53A"
+  "translators": "Translators",
+  "hashCode": "2485B4ED508717259DCB0A83B9F9848F"
 }
