--- a/src/assets/lang/language.vi-vn.json
+++ b/src/assets/lang/language.vi-vn.json
@@ -416,5 +416,6 @@
   "completedCommunityMission": "Completed",
   "viewMoreOnNmsWiki": "View more on the NMS wiki",
   "platform": "Platform",
-  "hashCode": "8E0F52D0D877137DA8D7646B0F57EDFA"
+  "translators": "Translators",
+  "hashCode": "C6B93D85DF0E368798313D06E9C27646"
 }
