--- a/src/assets/lang/language.zh-hans.json
+++ b/src/assets/lang/language.zh-hans.json
@@ -416,5 +416,6 @@
   "completedCommunityMission": "已完成的",
   "viewMoreOnNmsWiki": "前往无人深空Wiki查看更多",
   "platform": "游戏平台",
-  "hashCode": "35CC41EB52DF6ECC2C015E3D591EA277"
+  "translators": "Translators",
+  "hashCode": "73A9F4C97BCF4E7649819572130EF279"
 }
