--- a/src/assets/lang/language.zh-hant.json
+++ b/src/assets/lang/language.zh-hant.json
@@ -416,5 +416,6 @@
   "completedCommunityMission": "Completed",
   "viewMoreOnNmsWiki": "View more on the NMS wiki",
   "platform": "Platform",
-  "hashCode": "8200366C6D80DD909B8DF2C3138F1231"
+  "translators": "Translators",
+  "hashCode": "F72AAFB21884A692A2B86B8211C79DBF"
 }
