--- a/src/assets/lang/language.tl.json
+++ b/src/assets/lang/language.tl.json
@@ -416,5 +416,6 @@
   "completedCommunityMission": "Completed",
   "viewMoreOnNmsWiki": "View more on the NMS wiki",
   "platform": "Platform",
-  "hashCode": "2A7061D34CF44CD59BC1FAA9DAF11014"
+  "translators": "Translators",
+  "hashCode": "1FE67FFBC0470E0BBC5181B613CA371D"
 }
