--- a/src/assets/lang/language.ur.json
+++ b/src/assets/lang/language.ur.json
@@ -416,5 +416,6 @@
   "completedCommunityMission": "Completed",
   "viewMoreOnNmsWiki": "View more on the NMS wiki",
   "platform": "Platform",
-  "hashCode": "8319815E0C10F5C4D111E4BB31E078C5"
+  "translators": "Translators",
+  "hashCode": "18B2A9DF019971654DE25042FBA94FE6"
 }
