--- a/release_notes.txt
+++ b/release_notes.txt
@@ -1,4 +1,5 @@
-0.10.0
+0.11.0
 
-- Added TechTree page
-- Added tiles page
+- Reward from Quicksilver Synthesis Companion
+- Better controller icon system
+  - e.g. Boltcaster description now shows keys based on platform better
