--- a/release_notes.txt
+++ b/release_notes.txt
@@ -5,3 +5,4 @@
   - e.g. Boltcaster description now shows keys based on platform better
   - You can now change the platform from the page
 - Show Quicksilver prices on Community Mission Timeline page
+- Add CommunityLinks page
