Fix blueprint cost showing as 0 on some items

--- a/release_notes.txt
+++ b/release_notes.txt
@@ -6,3 +6,4 @@
   - You can now change the platform from the page
 - Show Quicksilver prices on Community Mission Timeline page
 - Add CommunityLinks page
+- Fix blueprint cost showing as 0 on some items
