fix weekend mission issues

--- a/release_notes.txt
+++ b/release_notes.txt
@@ -1,4 +1,4 @@
-0.11.0
+0.11.2
 
 - Reward from Quicksilver Synthesis Companion
 - Better controller icon system
@@ -7,3 +7,4 @@
 - Show Quicksilver prices on Community Mission Timeline page
 - Add CommunityLinks page
 - Fix blueprint cost showing as 0 on some items
+- Fix weekend mission page weird loader issue
