weekendMission fix | TechTree optimisation

--- a/release_notes.txt
+++ b/release_notes.txt
@@ -8,3 +8,6 @@
 - Add CommunityLinks page
 - Fix blueprint cost showing as 0 on some items
 - Fix weekend mission page weird loader issue
+- Weekend Mission fix 
+- TechTree optimisation
+- CSP improvement
