--- a/release_notes.txt
+++ b/release_notes.txt
@@ -1,13 +1,9 @@
-0.11.2
+0.12.0
 
-- Reward from Quicksilver Synthesis Companion
-- Better controller icon system
-  - e.g. Boltcaster description now shows keys based on platform better
-  - You can now change the platform from the page
-- Show Quicksilver prices on Community Mission Timeline page
-- Add CommunityLinks page
-- Fix blueprint cost showing as 0 on some items
-- Fix weekend mission page weird loader issue
-- Weekend Mission fix 
+- Better page error handling
+  - Weekend mission
+  - Expedition
+- Expedition 6 (partial data) need an update to MBinCompiler to complete
+- Updated rewardFrom section for Twitch items
 - TechTree optimisation
 - CSP improvement
