--- a/release_notes.txt
+++ b/release_notes.txt
@@ -1,9 +1,9 @@
-0.12.0
+0.13.0
 
-- Better page error handling
-  - Weekend mission
-  - Expedition
-- Expedition 6 (partial data) need an update to MBinCompiler to complete
-- Updated rewardFrom section for Twitch items
-- TechTree optimisation
-- CSP improvement
+- Updated Expedition 6 data
+- Improve display of controller buttons in item descriptions again...
+- Fix incorrect Expedition Alphabet translation
+- Fixed missing procedural stats
+- Fixed 3 items in "Damaged" category with incorrect crafting recipes
+- Fix rewardFrom section listing incorrect TwitchDrop Campaign
+
