--- a/release_notes.txt
+++ b/release_notes.txt
@@ -1,3 +1,7 @@
+0.14.1
+
+- Quick fix for proceduralStatBonuses
+
 0.14.0
 
 - Add the "View All Raw Materials Required" button to item details pages
