Fix issue with Toast messages becoming duplicated

--- a/release_notes.txt
+++ b/release_notes.txt
@@ -1,3 +1,9 @@
+0.15.0
+
+- DevDetails button fixes
+- Fix issue with Toast messages becoming duplicated
+
+
 0.14.1
 
 - Quick fix for proceduralStatBonuses
