--- a/release_notes.txt
+++ b/release_notes.txt
@@ -2,6 +2,8 @@
 
 - DevDetails button fixes
 - Fix issue with Toast messages becoming duplicated
+- Added missing images for Titles
+- Fixes for Flora item images
 
 
 0.14.1
