fix errors from upgrade

--- a/release_notes.txt
+++ b/release_notes.txt
@@ -1,3 +1,9 @@
+0.16.0
+- Optimise dependencies
+
+
+------------------------------------------------
+
 0.15.3
 - Handle TimeLoop research in Community mission page
 
@@ -9,6 +15,7 @@
 - Fixes for Flora item images
 - Added items from Leviathan Update 
 
+------------------------------------------------
 
 0.14.1
 
