--- a/release_notes.txt
+++ b/release_notes.txt
@@ -1,7 +1,7 @@
 0.16.0
 - Optimise dependencies
 - StarshipScrap page and item detail tiles
-
+- Added Cronus rating tile
 
 ------------------------------------------------
 
