--- a/release_notes.txt
+++ b/release_notes.txt
@@ -1,3 +1,11 @@
+0.17.0
+- Fix Floating Action buttons in navbar being inconsistent
+- Fix View All Required materials page quantities being multiplied when navigating back and forth to the page
+- New home page
+- Added Community Spotlight page
+
+------------------------------------------------
+
 0.16.0
 - Optimise dependencies
 - StarshipScrap page and item detail tiles
