Fix Expedition alphabet links

--- a/release_notes.txt
+++ b/release_notes.txt
@@ -1,3 +1,8 @@
+0.18.0
+- Fix Expedition alphabet links
+
+------------------------------------------------
+
 0.17.0
 - Fix Floating Action buttons in navbar being inconsistent
 - Fix View All Required materials page quantities being multiplied when navigating back and forth to the page
