--- a/release_notes.txt
+++ b/release_notes.txt
@@ -2,6 +2,7 @@
 - New items from the Endurance update
 - Added Expedition 8 data
 - Fixed Expedition timer showing negative value for expeditions that have not started
+- Repair Expedition rewards
 
 ------------------------------------------------
 
