--- a/release_notes.txt
+++ b/release_notes.txt
@@ -1,3 +1,8 @@
+0.19.0
+- Improve Expedition reward display
+
+------------------------------------------------
+
 0.18.0
 - New items from the Endurance update
 - Added Expedition 8 data
