--- a/release_notes.txt
+++ b/release_notes.txt
@@ -1,3 +1,12 @@
+0.20.0
+- Fix Expedition titles in multiple languages
+- Update Singularity Engine icon
+- Fix Refiner recipe times
+- Moved items that were in incorrect categories
+- Fixed language resetting to English when cancelling language selection
+
+------------------------------------------------
+
 0.19.0
 - Improve Expedition reward display
 - Twitch rewards page
