--- a/release_notes.txt
+++ b/release_notes.txt
@@ -1,3 +1,8 @@
+0.22.0
+- Added new NMS 4.0 game items
+
+------------------------------------------------
+
 0.20.0
 - Fix Expedition titles in multiple languages
 - Update Singularity Engine icon
