🔖 Set correct "What Is New" guid

--- a/release_notes.txt
+++ b/release_notes.txt
@@ -1,6 +1,7 @@
 0.24.0
 ✨ Integrate with NMSCD Community Search
 ✨ Add Contributors page
+📦 Extract data from experimental update (9863907)
 
 ------------------------------------------------
 
