📦 Regenerate json files

--- a/src/assets/lang/language.pt-br.json
+++ b/src/assets/lang/language.pt-br.json
@@ -211,7 +211,7 @@
   "areYouSure": "Você tem certeza?",
   "synchronize": "Sincronizar",
   "inventoryNotUploaded": "O inventário não foi carregado",
-  "inventoryUploaded": "inventário foi carregado\n",
+  "inventoryUploaded": "inventário foi carregado",
   "inventoryNotRestored": "O inventário não foi restaurado",
   "inventoryRestored": "O inventário foi restaurado",
   "backupInventory": "Backup do inventário",
@@ -425,7 +425,7 @@
   "twitchCampaignNum": "Campanha da Twitch",
   "milestones": "Marcos",
   "viewGuildMissions": "Missões da Guilda",
-  "twitchDrop": "Twitch Drop\n",
+  "twitchDrop": "Twitch Drop",
   "quicksilverCompanion": "",
   "mergeInventoryQuantities": "Fundir capacidade de inventário ",
   "shareForceLanguage": "Linguagem de Força",
@@ -468,6 +468,6 @@
   "portalCodeCopied": "Código de portal copiado!",
   "randomPortal": "Portal Aleatório",
   "forceNumberOfColumns": "Forçar número de colunas",
-  "allItemsListUseCompactTiles": "All items list: Use Compact Tiles",
-  "hashCode": "15BD066D232BE8ACA2ED2410DD0B5A85"
+  "allItemsListUseCompactTiles": "Lista de todos os itens: Usar Mosaico Compacto",
+  "hashCode": "F8F713CF6679DD08512596A8A152C328"
 }
